--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,9 @@ body {
 }
 
 
+/* -------------------------------- MENU NAVEGATOR -------------------------------- */
+
+
 #div-menu {
     background-color: #0d1117;
     display: grid;
@@ -73,6 +76,10 @@ option {
     color: white;
 }
 
+#div-navegator a.active {
+    color: #5ce1e6;
+}
+
 #div-navegator a:hover {
     color: #5ce1e6;
 }
@@ -103,6 +110,7 @@ option {
 
 
 
+/* -------------------------------- GENERAL -------------------------------- */
 
 
 
@@ -113,18 +121,6 @@ option {
 span {
     color: #5ce1e6;
 }
-
-
-#div-navegator a.active {
-    color: #5ce1e6;
-
-}
-
-
-
-
-
-
 
 
 
@@ -251,32 +247,34 @@ span {
 
 
 #project {
-    border-radius: 20px;
+    border: 1px solid white;
+    border-radius: 20px ;
+
     width: 90%;
-    height: 220px;
+    height: 300px;
     max-width: 450px;
     margin: auto;
     margin-top: 30px;
-    background-color: white;
     position: relative;
     display: flex;
-    justify-content: center;
-    align-items: center;
     position: relative;
     
 }
 
 #project img{
+    position: absolute;
+    top: 0;
     width: 100%;
-    border-radius: 20px;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
 }
 
 
 #info-project {
-    
-    border-radius: 30px;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
     width: 100%;
-    height: 100%;
+    height: 220px;
     text-align: center;
     opacity: 0; /* Invisible por defecto */
     transition: opacity 0.5s;
@@ -284,45 +282,88 @@ span {
     justify-content: center;
     align-content: center;
     z-index: 2;
+    background-color: #0d1117;
+
 
 }
 
 #info-project p {
-    font-size: xx-large;
     font-weight: bold;
     width: 100%;
 }
 
 #p-FixGarage {
+    color: #5ce1e6;
+    font-size: xx-large;
+}
+
+#p-FixGarage-info{
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 25%;
     color: white;
+    font-size: 15px;
+    text-align: left;
+    padding: 15px;
+    padding-top: 2px;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+
 }
 
 #p-GraveLock {
-    color: #0d1117;
-}
+    color: #5ce1e6;
 
-#info-project p {
     font-size: xx-large;
-    width: 100%;
 }
 
-#info-project button {
+#p-GraveLock-info{
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 25%;
+    color: white;
+    font-size: 15px;
+    text-align: left;
+    padding: 15px;
+    padding-top: 2px;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+
+}
+
+#github {
     margin-top: 20px;
     width: 40px;
     height: 40px;
+    border: 1px solid black;
     background-color: #0d1117;
     border-radius: 40px;
     background-image: url('../assets/images/github-mark-white.png');
     background-size: cover;
     cursor: pointer;
+    margin-bottom: 50px;
+
+    margin-right: 20px;
+}
+
+#info {
+    margin-top: 20px;
+    width: 40px;
+    height: 40px;
+    background-color: #0d1117;
+    border: 1px solid white;
+
+    border-radius: 40px;
+    background-image: url('../assets/images/infologo.jpg');
+    background-size: cover;
+    cursor: pointer;
+    margin-bottom: 50px;
 }
 
 #info-project button:hover {
     scale: 130%;
-}
-
-#project:hover img {
-    filter: blur(10px);
 }
 
 #project:hover #info-project {
@@ -400,7 +441,6 @@ span {
     font-size: 58px;
     height: 100px;
     text-align: center;
-    padding: 20px;
 }
 
 #p-education {
@@ -416,589 +456,10 @@ span {
 
 
 
-@media only screen and (max-device-width : 500px) {}
 
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-@media only screen and (max-device-width : 1000px) {
-
-    #div-about {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-
-    #about-content {
-        padding-right: 5px;
-        padding-left: 5px;
-    }
-
-    #about-image {
-        display: none;
-
-    }
-
-
-    #p-info {
-        width: 100%;
-    }
-
-    #p-button {
-        width: 100%;
-    }
-
-
-    #div-about {
-        padding-left: 25px;
-        padding-right: 25px;
-    }
-
-
-    #experience-content {
-        max-width: 90%
-    }
-
-    #project-content {
-        max-width: 90%
-    }
-
-    #technology-content {
-        max-width: 90%
-    }
-
-
-
-
-
-
-    #div-menu {
-
-        grid-template-columns: 20% 60% 20%;
-        font-size: 14px;
-        height: 60px;
-        padding-left: 20px;
-        padding-right: 20px;
-
-    }
-
-    #div-language-opt,
-    #div-style-opt {
-        display: block;
-    }
-
-    #div-menu select {
-        font-size: 14px;
-    }
-
-    #div-menu button {
-        font-size: 14px;
-    }
-
-    #div-navegator {
-        width: 100%;
-    }
-
-    #div-showmenu {
-        display: block;
-        margin-top: 0px;
-
-    }
-
-    #div-showmenu button {
-        background-color: #0d1117;
-        border: none;
-        color: white;
-        width: 100%;
-        height: 40px;
-        margin-top: 0px;
-
-    }
-
-    #div-navegator-ul {
-        display: none;
-    }
-
-    #div-navegator-li {
-        padding-top: 0px;
-        padding-bottom: 0px;
-    }
-
-
-
-
-
-
-
-    /* asdasd */
-
-
-
-
-
-    /* #div-menu {
-        position: top;
-        height: 50%;
-        grid-template-columns: 100%;
-    }
-
-    #div-language-opt,#div-style-opt {
-        display: none;
-    }
-
-
-
-    #div-showmenu {
-        display: block;
-    }
-
-    #div-showmenu button {
-        border-bottom: 1px solid #5ce1e6;
-        border-top: 1px solid #5ce1e6;
-        margin-top: 15px;
-
-    }
-
-   #div-navegator-ul {
-        display: block;
-    }
-
-    #div-navegator li {
-        width: 100%;
-        padding-top: 15px;
-        padding-bottom: 15px;
-
-    }  */
-
-
-
-@font-face {
-    font-family: 'Madani Arabic';
-    src: local('Madani Arabic'),
-        url('../assets/fonts/MadaniArabic-Regular.ttf') format("truetype");
-}
-
-
-* {
-    margin: 0;
-    padding: 0;
-    font-family: Madani Arabic;
-    box-sizing: border-box;
-}
-
-
-body {
-    background-color: #0d1117;
-    color: white;
-}
-
-
-#div-menu {
-    background-color: #0d1117;
-    display: grid;
-    grid-template-columns: 20% 60% 20%;
-    width: 100%;
-    height: 60px;
-    text-align: center;
-
-}
-
-
-
-#div-language-opt {
-    margin: auto;
-}
-
-#div-language-opt select,
-option {
-    color: white;
-    background-color: #0d1117;
-    border: 0;
-    font-size: 18px;
-
-}
-
-#div-language-opt select:hover {
-    color: #5ce1e6;
-}
-
-
-#div-navegator {
-    margin: auto;
-    text-decoration: none;
-}
-
-#div-navegator li {
-    float: left;
-    list-style: none;
-    width: 150px;
-    height: auto;
-    transition: transform 0.3s ease;
-}
-
-#div-navegator li:hover {
-    transform: scale(1.2);
-    color: #5ce1e6;
-}
-
-#div-navegator a {
-    text-decoration: none;
-    color: white;
-}
-
-#div-navegator a:hover {
-    color: #5ce1e6;
-}
-
-#div-style-opt {
-    margin: auto;
-}
-
-#div-style-opt button {
-    background-color: #0d1117;
-    border: 0;
-    font-size: 18px;
-    transition: transform 0.3s ease;
-
-}
-
-#div-style-opt button:hover {
-    transform: scale(1.6);
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-#container {
-    width: 100%;
-}
-
-span {
-    color: #5ce1e6;
-}
-
-
-#div-navegator a.active {
-    color: #5ce1e6;
-
-}
-
-
-
-
-
-
-
-
-
-/* -------------------------------- div about -------------------------------- */
-
-#div-about {
-    height: 100dvh;
-    padding-bottom: 80px;
-    padding-top: 60px;
-    padding-left: 80px;
-}
-
-#about-content {}
-
-#about-content p {}
-
-#p-name {
-    font-size: calc(10px + 2vw);
-
-}
-
-#p-job {
-    overflow: visible;
-    font-size: calc(25px + 8vw);
-    line-height: calc(25px + 8vw);
-    padding-bottom: 3vw;
-}
-
-#p-info {
-    width: 60%;
-
-    font-size: calc(10px + 0.7vw);
-    padding-top: 20px;
-}
-
-#p-button {
-    width: 60%;
-    font-size: 20px;
-    padding-left: 12px;
-    padding-top: 40px;
-    text-align: center;
-}
-
-#p-button button {
-    background-color: #5ce1e6;
-    height: 45px;
-    width: 220px;
-    border-radius: 50px;
-    border: 0;
-    font-size: 18px;
-    font-weight: bolder;
-    transition: transform 0.3s ease;
-}
-
-#p-button button:hover {
-    transform: scale(1.2);
-}
-
-
-
-/*  -------------------------------- div experience -------------------------------- */
-
-
-
-#div-experience {
-    width: 100%;
-    margin-bottom: 50px;
-}
-
-
-
-#experience-content {
-    max-width: 700px;
-    margin: auto;
-}
-
-#div-experience h1 {
-    font-size: 58px;
-    height: 120px;
-    text-align: center;
-    padding: 20px;
-}
-
-#p-experience {
-    border-top: 1px solid white;
-    padding-top: 20px;
-    margin-top: 20px;
-
-}
-
-#p-experience span {
-    font-size: 30px
-}
-
-#div-experience li {}
-
-
-/*  -------------------------------- div project -------------------------------- */
-
-
-#div-project {
-    width: 100%;
-    margin-bottom: 50px;
-}
-
-
-#project-content {
-    padding-top: 20px;
-    margin-top: 30px;
-    display: flex;
-    flex-wrap: wrap;
-    margin: auto;
-    width: 950px;
-    margin-top: 30px;
-
-}
-
-#div-project h1 {
-    font-size: 58px;
-    height: 100px;
-    text-align: center;
-    padding: 20px;
-}
-
-
-#project {
-    border-radius: 20px;
-    width: 90%;
-    height: 220px;
-    max-width: 450px;
-    margin: auto;
-    margin-top: 30px;
-    background-color: white;
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    
-}
-
-#project img{
-    width: 100%;
-    border-radius: 20px;
-}
-
-
-#info-project {
-    
-    border-radius: 30px;
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    opacity: 0; /* Invisible por defecto */
-    transition: opacity 0.5s;
-    position: absolute;
-    justify-content: center;
-    align-content: center;
-    z-index: 2;
-
-}
-
-#info-project p {
-    font-size: xx-large;
-    font-weight: bold;
-    width: 100%;
-}
-
-#p-FixGarage {
-    color: white;
-}
-
-#p-GraveLock {
-    color: #0d1117;
-}
-
-#info-project p {
-    font-size: xx-large;
-    width: 100%;
-}
-
-#info-project button {
-    margin-top: 20px;
-    width: 40px;
-    height: 40px;
-    background-color: #0d1117;
-    border-radius: 40px;
-    background-image: url('../assets/images/github-mark-white.png');
-    background-size: cover;
-    cursor: pointer;
-}
-
-#info-project button:hover {
-    scale: 130%;
-}
-
-#project:hover img {
-    filter: blur(10px);
-}
-
-#project:hover #info-project {
-    opacity: 1;
-}
-
-
-
-#technology-content {
-    margin: auto;
-    display: flex;
-    gap: 20px;
-    justify-content: center;
-    width: 950px;
-    height: 200px;
-    margin-top: 30px;
-
-
-}
-
-.technology {
-    height: 64px;
-    width: 64px;
-    margin-top: 30px;
-}
-
-.technology:hover {
-    scale: 115%;
-}
-
-
-
-#html {
-    background-size: cover;
-    background-image: url('../assets/images/html5-icon.png');
-}
-
-#css {
-    background-size: cover;
-    background-image: url('../assets/images/css3-icon.png');
-}
-
-#javascript {
-    background-size: cover;
-    background-image: url('../assets/images/javascript-icon.png');
-}
-
-#django {
-    background-size: cover;
-    background-image: url('../assets/images/django-icon.png');
-}
-
-
-
-
-/*  -------------------------------- div education -------------------------------- */
-
-
-
-#div-education {
-    width: 100%;
-    margin-bottom: 50px;
-}
-
-#p-education span {
-    font-size: calc(10px + 0.6vw);
-}
-
-#education-content {
-    max-width: 700px;
-    margin: auto;
-}
-
-#div-education h1 {
-    font-size: 58px;
-    height: 100px;
-    text-align: center;
-    padding: 20px;
-}
-
-#p-education {
-    border-top: 1px solid white;
-    padding-top: 20px;
-    margin-top: 30px;
-
-}
-
-#div-showmenu {
-    display: none;
-}
-
-}
 
 
 @media only screen and (max-device-width : 500px) {}
@@ -1106,51 +567,5 @@ span {
         padding-top: 0px;
         padding-bottom: 0px;
     }
-
-
-
-
-
-
-
-    /* asdasd */
-
-
-
-
-
-    /* #div-menu {
-        position: top;
-        height: 50%;
-        grid-template-columns: 100%;
-    }
-
-    #div-language-opt,#div-style-opt {
-        display: none;
-    }
-
-
-
-    #div-showmenu {
-        display: block;
-    }
-
-    #div-showmenu button {
-        border-bottom: 1px solid #5ce1e6;
-        border-top: 1px solid #5ce1e6;
-        margin-top: 15px;
-
-    }
-
-   #div-navegator-ul {
-        display: block;
-    }
-
-    #div-navegator li {
-        width: 100%;
-        padding-top: 15px;
-        padding-bottom: 15px;
-
-    }  */
 
 }
