--- a/css/styles.css
+++ b/css/styles.css
@@ -353,6 +353,15 @@ span {
 
 
 
+#p-AtomCrawler-info {
+    padding: 15px;
+    text-align: center;
+}
+
+#p-ApyShelf-info {
+    padding: 15px;
+    text-align: center;
+}
 
 
 #p-FixGarage-info {
